--- a/app/src/main/res/layout/activity_analysis_definition.xml
+++ b/app/src/main/res/layout/activity_analysis_definition.xml
@@ -55,7 +55,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="6dp"
             android:layout_marginBottom="8dp"
-            android:text="Analyser"
+            android:text="Analyse"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             android:textColor="@android:color/background_light"
             app:layout_constraintBottom_toBottomOf="parent"
